# sorting-template

./: .gitignore  CMakeLists.txt  README.md
src/: sort.hpp
tests/: test_sort.cpp
